# free_inference

./: .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: docs.yml
docs/source/: api-reference.md  changelog.md  conf.py  examples.md  index.rst  integrations.md  models.md  quickstart.md
docs/source/_static/: custom.css
docs/source/developer/: adding-models.md  architecture.md  configuration.md  contributing.md  database.md  deployment.md  fasrc.md  freeinference.md  installation.md  openrouter.md  routing.md
